[package]
name = "rust-pipeline"
version = "0.1.0"
authors = ["rafael"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/raaffaaeell/rust-pipeline"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
log = "0.4.8"
regex = "1.1.9"
walkdir = "2.2.9"
